--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,5 @@
 {
 	"name": "aspnet-api-versioning Codespace",
-	"image": "mcr.microsoft.com/vscode/devcontainers/dotnet:0.201.9-5.0",
 	"settings": {
 		"workbench.colorTheme": "Default Dark+",
 		"terminal.integrated.defaultProfile.linux": "pwsh"
@@ -23,6 +22,9 @@
 		"jmrog.vscode-nuget-package-manager",
 	],
 	"postCreateCommand": "",
+  "build": {
+    "dockerfile": "Dockerfile"
+  },
 }
 
 // Built with ❤ by [Pipeline Foundation](https://pipeline.foundation)
